<resources>
    <string name="add_task">添加任务</string>
    <string name="edit_task">编辑任务</string>
    <string name="app_name">任务备忘录</string>
    <string name="string_no_msg">暂时还没有消息哦</string>
    <string name="string_no_task">你还没有完成的任务呦,快去努力完成吧!</string>
    <string name="string_add_ok">确定添加</string>
    <string name="string_input_there">在这里输入</string>
    <string name="string_input_content">输入你的评论：</string>
    <string name="string_share">分享</string>
    <string name="string_input_task_desc">请输入任务描述</string>
    <string name="string_task_desc">任务描述</string>
    <string name="string_input_task_title">请输入任务名称</string>
    <string name="string_task_title">任务名称</string>
    <string name="ok">Ok</string>
    <string name="string_current_not_complete_task">当前未完成任务</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_reset_time">重置时间</string>
    <string name="string_ok_edit">确定修改</string>
    <string name="all_tags">All Tags</string>
    <string name="tag">添加TAG</string>
    <string name="string_title_done_task">已经归档的任务</string>
    <string name="string_task_done_tip">任务已经归档，可以在已完成任务界面里面查看呦</string>
    <string name="string_menu_history">历史</string>
    <string name="string_menu_setting">设置</string>
    <string name="test_title">测试标题</string>
    <string name="test_message">这是测试的内容</string>
    <string name="copyright_mengfly">CopyRight©MengFly</string>
    <string name="string_delete">删除</string>
    <string name="string_is_delete_task">是否删除任务？</string>
    <string name="string_delete_success">删除成功,您可以在回收站找到近期删除的任务。</string>
    <string name="menu_complete_task">归档任务</string>
    <string name="menu_delete_task">删除任务</string>
    <string name="menu_history_words">每日一句</string>
    <string name="menu_done_task">已完成的任务</string>
    <string name="menu_recycle">回收站</string>
    <string name="about">About</string>
    <string name="menu_about_app">关于App</string>
    <string name="menu_back">应用反馈</string>
    <string name="empty">没有信息</string>
    <string name="choose_contacs">选择联系人</string>
    <string name="add_action">点击添加您要执行的具体任务</string>
    <string name="click_add_time">点击添加提醒时间</string>
    <string name="notification_title">提醒设置</string>
    <string name="notification_delete_task">删除任务提醒</string>
    <string name="select_sound">选择提醒铃声</string>
    <string name="select_sound_title">选择您需要的通知声音</string>
    <string name="input_email_address">输入Email地址</string>
    <string name="input_email_content">在这里输入您想要发送的邮件信息</string>
    <string name="do_action">执行任务</string>
    <string name="want_done_time">提醒时间</string>
    <string name="create_time">创建时间</string>
    <string name="task_info">任务详情</string>
    <string name="search_baidu">百度搜索</string>
    <string name="search_sougou">搜狗搜索</string>
    <string name="search_biying">必应搜索</string>
    <string name="search_github">Github搜索</string>

    <string-array name="action_type">
        <item>打电话</item>
        <item>打开一个App</item>
        <item>打开一个网页</item>
        <item>发送一个Email</item>
    </string-array>

    <string-array name="action_selects">
        <item>重新选择</item>
        <item>删除这个动作</item>
    </string-array>
</resources>
