<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/string_menu_history">
        <menu>
            <item
                android:id="@+id/menu_history_words"
                android:icon="@drawable/ic_one_words"
                android:title="@string/menu_history_words" />
            <item
                android:id="@+id/menu_done_task"
                android:icon="@drawable/ic_menu_done_task"
                android:title="@string/menu_done_task" />
            <item
                android:id="@+id/menu_recycle"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/menu_recycle" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/string_menu_setting" />

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/menu_about_app"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about_app" />
            <item
                android:id="@+id/menu_back"
                android:icon="@drawable/ic_edit"
                android:title="@string/menu_back" />
        </menu>


    </item>

</menu>