<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/DescTextView"
            android:text="@string/string_input_content" />

        <EditText
            android:id="@+id/et_talk_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/string_input_there"
            android:inputType="text"
            android:textColorHint="@color/color_text_disabled_dark" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_dialog_ok"
        style="@style/btn_flat"
        android:layout_gravity="end"
        android:text="@string/string_add_ok" />

</LinearLayout>