<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_dialog_title"
                style="@style/TitleTextView"
                android:gravity="center_horizontal"
                android:text="@string/test_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_dialog_message"
                style="@style/TextMessage"
                android:text="@string/test_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_dialog_cancel"
                style="@style/TextSelectItem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/string_cancel" />

            <TextView
                android:id="@+id/tv_dialog_ok"
                style="@style/TextSelectItem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/string_ok"
                android:textColor="@color/app_btn_color" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_dialog_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/bg_img_circle"
        android:padding="5dp"
        android:scaleType="center" />
</FrameLayout>