<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_main_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_task_title"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/string_input_task_title"
        android:padding="10dp"
        android:textColor="@color/color_text_title"
        android:textColorHint="@color/color_text_desc" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_task_desc"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/string_input_task_desc"
        android:lineSpacingExtra="6dp"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="@color/color_text_title"
        android:textColorHint="@color/color_text_desc" />


</LinearLayout>