<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <!--已经添加过的TAG-->
        <LinearLayout
            android:id="@+id/ll_added_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="30dp"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        style="@style/DescTextView"
        android:text="@string/all_tags" />

    <!--所有的Tag的集合-->
    <com.example.todolib.view.widget.FlowLayout
        android:id="@+id/fl_all_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_back"
        android:minHeight="40dp"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_add_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:textColor="@color/color_text_main_dark"
                    android:id="@+id/et_tag_input"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_back"
                    android:padding="5dp" />

                <ImageButton
                    android:layout_margin="5dp"
                    android:id="@+id/ibtn_ok"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ic_done"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <ImageButton
                    android:layout_margin="6dp"
                    android:id="@+id/ibtn_cancel"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ic_cancle"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_add_tag"
                style="@style/btn_flat"
                android:text="@string/tag" />


        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn"
            android:text="@string/string_ok" />
    </LinearLayout>


</LinearLayout>