<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_include_toolbar_alpha" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DescTextView"
                    android:padding="10dp"
                    android:text="@string/notification_title" />

                <Switch
                    android:id="@+id/s_delete_task_tip"
                    style="@style/TextSelectItem"
                    android:text="@string/notification_delete_task" />

                <Switch
                    android:id="@+id/s_time_too_late_tip"
                    style="@style/TextSelectItem"
                    android:text="主界面时间太晚提醒" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_select_sound"
                        style="@style/TextSelectItem"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/select_sound" />

                    <ImageButton
                        android:id="@+id/ib_play_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="?selectableItemBackground"
                        android:focusable="false"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_start" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DescTextView"
                    android:padding="10dp"
                    android:text="安全设置" />

                <TextView
                    android:id="@+id/tv_set_pass"
                    style="@style/TextSelectItem"
                    android:text="设置密码" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DescTextView"
                    android:padding="10dp"
                    android:text="关于" />

                <TextView
                    android:id="@+id/tv_help"
                    style="@style/TextSelectItem"
                    android:text="帮助信息" />

                <TextView
                    android:id="@+id/tv_about_app"
                    style="@style/TextSelectItem"
                    android:text="关于app" />

                <TextView
                    android:id="@+id/tv_license"
                    style="@style/TextSelectItem"
                    android:text="版权声明" />


                <TextView
                    android:id="@+id/tv_private"
                    style="@style/TextSelectItem"
                    android:text="隐私保护" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <include
            layout="@layout/layout_include_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="10dp" />
    </LinearLayout>
</ScrollView>